# fcitx5-pinyin-zhwiki

./: .gitignore  Makefile  README  convert.py  mediawiki.py  pyproject.toml  recipe.yaml  zhwiki-exclude-titles.py  zhwiki-web-slang.py
.github/workflows/: build.yaml
